@@ -1,5 +1,6 @@
 Overview of changes in lightdm 0.3.5
 
+    * Set working directory when logging in
     * Massive improvements to Qt greeter
     * Fix XDMCP authentication/authorization errors
     * Have the daemon open a connection to a local X server
